--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
 
     
-    <a href="https://www.mythrillfiction.com/the-dark-rider" alt="Mythrill" target="_blank">
+    <a href="" alt="Mythrill" target="_blank">
         <div class="card">
           <div class="wrapper">
             <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg" class="cover-image" />
@@ -33,7 +33,7 @@
         </div>
       </a>
       
-      <a href="https://www.mythrillfiction.com/force-mage" alt="Mythrill" target="_blank">
+      <a href="" alt="Mythrill" target="_blank">
         <div class="card">
           <div class="wrapper">
             <img src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg" class="cover-image" />
